<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="16dp">

	<Button
		android:id="@+id/goToStandardMode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/startupMode_button_text_1"
		android:textAllCaps="false"/>

	<Button
		android:id="@+id/goToSingleTopMode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/startupMode_button_text_2"
		android:textAllCaps="false"/>

	<Button
		android:id="@+id/goToSingleTaskMode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:text="@string/startupMode_button_text_3"
		android:textAllCaps="false"/>

	<Button
		android:id="@+id/goToSingleInstanceMode"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/startupMode_button_text_5"
		android:textAllCaps="false"/>

</LinearLayout>