<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:paddingBottom="16sp"
	    android:text="@string/directory_title"
	    android:textSize="48sp" />

	<ListView
		android:id="@+id/directory_list_view"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	</ListView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToFirsChapter"
                android:text="@string/directory_button_1"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToSecondChapter"
                android:text="@string/directory_button_2"
                android:textAllCaps="false" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goTOThirdChapter"
                android:text=""
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
